--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,16 @@
 ---
-language: python
-python: "2.7"
+sudo: required
+dist: trusty
 
-# Use the new container infrastructure
-sudo: false
+language: generic
 
-# Install ansible
-addons:
-  apt:
-    packages:
-    - python-pip
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y python python-pip
 
 install:
   # Install ansible
-  - pip install ansible
+  - sudo pip install ansible
 
   # Check ansible version
   - ansible --version
@@ -21,9 +18,25 @@ install:
   # Create ansible.cfg with correct roles_path
   - printf '[defaults]\nroles_path=../' >ansible.cfg
 
+  # Install role dependencies
+  # ...
+
 script:
   # Basic role syntax check
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+
+  # Run the role/playbook with ansible-playbook
+  - ansible-playbook tests/test.yml -i tests/inventory --connection=local --become
+
+  # Run the role/playbook again, checking to make sure it's idempotent
+  - >
+    ansible-playbook tests/test.yml -i tests/inventory --connection=local --become
+    | grep -q 'changed=0.*failed=0'
+    && (echo 'Idempotence test: pass' && exit 0)
+    || (echo 'Idempotence test: fail' && exit 1)
+
+  # Playbook specific tests
+  # ...
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
